<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloMensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="65dp"
        android:text="@string/introducza_texto"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextMensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/editTextMensaje"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/ejemplo_texto"
        android:inputType="textPersonName"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tituloNumero"
        app:layout_constraintEnd_toEndOf="@id/tituloMensaje"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@id/tituloMensaje"
        app:layout_constraintTop_toBottomOf="@+id/tituloMensaje" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="70px"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tituloMensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="31dp"
        android:paddingHorizontal="8dp"
        android:text="@string/introducza_numero"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMensaje" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/verdeSMS"
        android:paddingHorizontal="8dp"
        android:text="@string/boton_enviar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ejemplo_número"
        android:inputType="textPersonName"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnviar"
        app:layout_constraintEnd_toEndOf="@id/editTextMensaje"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/editTextMensaje"
        app:layout_constraintTop_toBottomOf="@+id/tituloNumero" />

</androidx.constraintlayout.widget.ConstraintLayout>